--- a/Countly.feedback.css
+++ b/Countly.feedback.css
@@ -53,16 +53,38 @@
     height: 40px;
     width: 170px;
     font-size:20px;
-    border: white; 
+    border: white;
     margin: 0px !important;
 }
 .checkbox-style {
     font-size: 15px;
     margin-top: 40px;
-    margin-right: 115px !important; 
+    margin-right: 115px !important;
     margin-top: 50px !important;
 }
 
-a[target="_blank"] { 
+a[target="_blank"] {
     background: white;
+}
+
+#countly-comment{
+    width: 100%;
+    height: 60px;
+    margin-top: 10px;
+    resize: none;
+    border: 1px solid #DBDBDB;
+    outline: none;
+    font-size: 13px;
+    border-radius: 3px;
+}
+#countly-email{
+    width: 100%;
+    outline: none;
+    border: 1px solid #DBDBDB;
+    height: 30px;
+    margin-top: 10px;
+    line-height: 20px;
+    padding-left: 2px;
+    font-size: 13px;
+    border-radius: 3px;
 }
